# pitot

./: CONTRIBUTING.md  README.md  UPSTREAM.json  doc.go  go.mod  go.sum  package.json  tsconfig.json
.github/workflows/: ci.yml  sync-upstream.yml
adapters/: adapters.go
bridge/: bridge.go  bridge_test.go
cmd/generate-schema/: main.go
cmd/pitot/: doctor_host.go  doctor_host_test.go  kimi_control_test.go  kimi_smoke_test.go  main.go  main_test.go  workbench.go  workbench_build_test.go  workbench_contract_test.go  workbench_dev_test.go  workbench_test.go
config/: config.go  config_test.go
conformance/: conformance.go  conformance_test.go
conformance/fixtures/: negative.jsonl  positive.jsonl
docs/: brand.md
e2e/: e2e_coverage_test.go  e2e_hook_test.go
examples/: doc.go
examples/local-approval/: main.go
examples/token-meter/: main.go
internal/testrole/: main.go  main_test.go
projection/: projection.go
protocol/: framing.go  framing_test.go
runtime/: capabilities.go  descriptor_unix.go  descriptor_windows.go  runtime.go  runtime_test.go  transport.go  transport_test.go
schema/: schema.go
sdk/csharp/Pitot/: Types.cs
sdk/java/src/main/java/com/operatorstack/pitot/: Action.java  BoundaryFault.java  Content.java  ControlRequested.java  Event.java  (+6 more)
sdk/python/: pyproject.toml
sdk/python/pitot/: __init__.py  runner.py  types.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  runner.rs  types.rs
sdk/tests/: go_test_runner.go  python_test.py  test_runners.py  ts_test.ts
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: index.ts  runner.ts
sensor/: decode_fuzz_test.go  sensor.go  sensor_test.go
types/ts/: pitot.ts
windtunnel/: doc.go  windtunnel_test.go
