[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# The bare name "pitot" is already taken on PyPI by an unrelated aeronautics
# project, so the distribution is published as operatorstack-pitot. The importable
# package stays "pitot" (packages below), so `import pitot` is unchanged.
[project]
name = "operatorstack-pitot"
version = "0.1.0"
description = "Pitot: The passive, protocol-first measurement boundary for coding agents."
authors = [
    { name = "Operator Stack" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["pitot"]

[project.urls]
Homepage = "https://github.com/operatorstack/pitot"
Repository = "https://github.com/operatorstack/pitot"
